fix: Failing tests.
(cherry picked from commit 0fe1ae13285a8af370f208cf7348a7cf9daa4797)

--- a/tests/__snapshots__/ResponseDocumentingTest__response()-json()_call_support_with_phpdoc_help__1.yml
+++ b/tests/__snapshots__/ResponseDocumentingTest__response()-json()_call_support_with_phpdoc_help__1.yml
@@ -6,3 +6,5 @@ servers:
     - { url: 'http://localhost/api' }
 paths:
     /test: { get: { operationId: fooTestTwo.index, tags: [Foo_TestTwo], responses: { 500: { description: '', content: { application/json: { schema: { type: object, properties: { error: { type: object, properties: { msg: { type: string }, code: { type: integer } }, required: [msg, code] } }, required: [error] } } } } } } }
+tags:
+    - { name: Foo_TestTwo }
