--- a/tests/__snapshots__/ValidationRulesDocumentingTest__it_supports_manual_authentication_info__1.yml
+++ b/tests/__snapshots__/ValidationRulesDocumentingTest__it_supports_manual_authentication_info__1.yml
@@ -8,5 +8,7 @@ security:
     - { apiKey: {  } }
 paths:
     /test: { get: { operationId: controllerWithoutSecurity.index, tags: [WithoutSecurity], responses: { 200: { description: '', content: { application/json: { schema: { type: string } } } } }, security: [{  }] } }
+tags:
+    - { name: WithoutSecurity }
 components:
     securitySchemes: { apiKey: { type: apiKey, in: query, name: api_token } }
