--- a/tests/__snapshots__/ErrorsResponsesTest__it_adds_auth_error_response__1.yml
+++ b/tests/__snapshots__/ErrorsResponsesTest__it_adds_auth_error_response__1.yml
@@ -6,5 +6,7 @@ servers:
     - { url: 'http://localhost/api' }
 paths:
     /test: { get: { operationId: errorsResponsesTest.addsAuthErrorResponse, tags: [ErrorsResponsesTest_], responses: { 200: { description: '', content: { application/json: { schema: { type: string } } } }, 403: { $ref: '#/components/responses/AuthorizationException' } } } }
+tags:
+    - { name: ErrorsResponsesTest_ }
 components:
     responses: { AuthorizationException: { description: 'Authorization error', content: { application/json: { schema: { type: object, properties: { message: { type: string, description: 'Error overview.' } }, required: [message] } } } } }
