--- a/tests/__snapshots__/ResponseDocumentingTest__response()-noContent()_call_support__1.yml
+++ b/tests/__snapshots__/ResponseDocumentingTest__response()-noContent()_call_support__1.yml
@@ -6,3 +6,5 @@ servers:
     - { url: 'http://localhost/api' }
 paths:
     /test: { get: { operationId: fooTest.index, tags: [Foo_Test], responses: { 204: { description: 'No content', content: { application/json: {  } } } } } }
+tags:
+    - { name: Foo_Test }
