--- a/tests/__snapshots__/ResourceCollectionResponseTest__transforms_collection_with_toArray_only__1.yml
+++ b/tests/__snapshots__/ResourceCollectionResponseTest__transforms_collection_with_toArray_only__1.yml
@@ -1,8 +1,8 @@
 type: object
 properties:
-    foo: { type: string, example: bar }
+    foo: { type: string, examples: [bar] }
     users: { type: array, items: { $ref: '#/components/schemas/UserResource' } }
-    meta: { type: object, properties: { foo: { type: string, example: bar } }, required: [foo] }
+    meta: { type: object, properties: { foo: { type: string, examples: [bar] } }, required: [foo] }
 required:
     - foo
     - users
