--- a/tests/__snapshots__/ValidationRulesDocumentingTest__it_extracts_rules_docs__1.yml
+++ b/tests/__snapshots__/ValidationRulesDocumentingTest__it_extracts_rules_docs__1.yml
@@ -4,7 +4,7 @@
     required: true
     description: 'A foo prop.'
     schema: { type: string }
-    example: wow
+    examples: [wow]
 -
     name: bar
     in: query
